<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.eim.practicaltestexample.PracticalTestExampleSecondaryActivity" >
	
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">
            <TextView
		        android:id="@+id/sum_box"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_row="0"
		        android:layout_column="0"
		        android:gravity="center"
		        android:ems="7"
		        android:text="@string/sum"/>
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ok"
            android:layout_row="1"
		    android:layout_column="0"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_row="1"
		    android:layout_column="1"/>
    </GridLayout>
</RelativeLayout>
