<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltestexample.PracticalTestExampleActivity" >

    <Button
        android:id="@+id/navigate_to_secondary_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_secondary_activity"
        android:layout_alignParentRight="true"/>
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_below="@id/navigate_to_secondary_activity">
        <EditText
            android:id="@+id/first_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:ems="6"
            android:text="@string/start_value"
            android:inputType="number"
            android:saveEnabled="false"/>
        <EditText
            android:id="@+id/second_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="center"
            android:ems="6"
            android:text="@string/start_value"
            android:inputType="number"
            android:saveEnabled="false"/>
        <Button
            android:id="@+id/press_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/press_me"/>
        <Button
            android:id="@+id/press_me_too"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_column="1"
            android:gravity="center"
            android:text="@string/press_me_too"/>
    </GridLayout>
    
</RelativeLayout>
